--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A client module for pineapple API for Node and JS Native apps",
   "main": "Client.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
