--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
   "bugs": {
     "url": "https://github.com/nem0z/tipsi-pineapple-client-api/issues"
   },
-  "homepage": "https://github.com/nem0z/tipsi-pineapple-client-api#readme"
+  "homepage": "https://github.com/nem0z/tipsi-pineapple-client-api#readme",
+  "dependencies": {
+    "node-fetch": "^3.2.9"
+  }
 }
