--- a/package.json
+++ b/package.json
@@ -2,11 +2,10 @@
   "name": "pineapple-client",
   "version": "1.0.0",
   "description": "A client module for pineapple API for Node and JS Native apps",
-  "main": "Client.js",
+  "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "test": "node index.test.js"
   },
   "repository": {
     "type": "git",
