--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
   },
   "homepage": "https://github.com/nem0z/tipsi-pineapple-client-api#readme",
   "dependencies": {
-    "node-fetch": "^3.2.9",
+    "node-fetch": "^3.2.9"
+  },
+  "devDependencies": {
     "typescript": "^4.7.4"
   }
 }
